<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab2_v2</name>
  <version>0.0.0</version>
  <description>ROS2 node for turtle control. Made for ANRO subject on WUT</description>
  <maintainer email="piotr.patek.stud@pw.edu.pl">Piotr Patek</maintainer>
  <maintainer email="damian.baraniak.stud@pw.edu.pl">Damian Baraniak</maintainer>
  <license>BSD-2.0</license>

  <depend>rclpy</depend>
  <depend>turtlesim</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
